# cgof

./: CMakeLists.txt  Makefile  README.md
src/: grid.c  grid.h  main.c
